# ChangeLog for dev-libs/openssl
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.30 2003/02/28 12:43:54 murphy Exp $

  28 Feb 2003; Maarten Thibaut <murphy@gentoo.org> openssl-0.9.6i.ebuild :
  Add code to detect sparc32 build on sparc64. Add code to compile for
  sparc32 on sparc64 depending on PROFILE_ARCH environment variable.

  23 Feb 2003; Zach Welch <zwelch@gentoo.org> openssl-0.9.6i.ebuild :
  Add arm patch to ebuild to fix problems linking aginst libcrypto.so
  Cleanup several lintool violations

  21 Feb 2003; Zach Welch <zwelch@gentoo.org> openssl-0.9.6i.ebuild :
  Added arm to keywords.

  21 Feb 2003; Jan Seidel <tuxus@gentoo.org> openssl-0.9.6g-r1.ebuild openssl-0.9.6i.ebuild :
  added a patch for mips
 
  12 Feb 2003; Guy Martin <gmsoft@gentoo.org> :
  Added -fPIC to CFLAGS for hppa needed by many apps linking to openssl.

  09 Feb 2003; Guy Martin <gmsoft@gentoo.org> :
  Added hppa to keywords.

  07 Jan 2003; Daniel Ahlberg <aliz@gentoo.org> openssl-0.9.7.ebuild :
  Added warning message and some info on how to successfully emerge new version.

*openssl-0.9.7 (05 Jan 2003)

  05 Jan 2003; Daniel Ahlberg <aliz@gentoo.org> files/digest-openssl-0.9.7 :
  Version bump. Found by jochem prins <j.prins@gmx.net> in #12973. Masked.

  05 Jan 2003; Daniel Ahlberg <aliz@gentoo.org> files/digest-openssl-0.9.6h :
  Removed masking in packages.mask and marked it unstable.

  19 Dec 2002; Daniel Ahlberg <aliz@gentoo.org> files/digest-openssl-0.9.6h :
  Re-made digest. The new md5 sum is the same as the md5sum in the announcement
  mail. I must have made the old digest against a bad archive.

*openssl-0.9.6h (16 Dec 2002)

  16 Dec 2002; Daniel Ahlberg <aliz@gentoo.org> :
  Version bump. Masked in packages.mask. NOT binary compatible with g so it will break things
  unless you re-emerge does packages failing.
